[Patient] Removed functional and acceptance tests, refactoring tests already present for accuracy.

--- a/src/Component/Patient/codeception.yml
+++ b/src/Component/Patient/codeception.yml
@@ -12,10 +12,16 @@ settings:
 extensions:
     enabled:
         - Codeception\Extension\RunFailed
-modules:
-    config:
-        Db:
-            dsn: ''
-            user: ''
-            password: ''
-            dump: tests/_data/dump.sql
+coverage:
+    enabled: true
+    include:
+        - Builder/*
+        - Exception/*
+        - Model/*
+        - Provider/*
+        - Repository/*
+    exclude:
+        - bin/*
+        - Resources/*
+        - Tests/*
+        - vendor/*
