--- a/src/Component/Activity/codeception.yml
+++ b/src/Component/Activity/codeception.yml
@@ -1,17 +1,28 @@
 actor: Tester
 paths:
-    tests: tests
-    log: tests/_output
-    data: tests/_data
-    helpers: tests/_support
+    tests: Tests
+    log: Tests/_output
+    data: Tests/_data
+    helpers: Tests/_support
+    envs: Tests/_envs
 settings:
     bootstrap: _bootstrap.php
     colors: true
     memory_limit: 1024M
-modules:
-    config:
-        Db:
-            dsn: ''
-            user: ''
-            password: ''
-            dump: tests/_data/dump.sql
+extensions:
+    enabled:
+        - Codeception\Extension\RunFailed
+coverage:
+    enabled: true
+    include:
+        - Builder/*
+        - Exception/*
+        - Model/*
+        - Provider/*
+        - Repository/*
+    exclude:
+        - bin/*
+        - Resources/*
+        - Tests/*
+        - vendor/*
+
