--- a/src/Component/Resource/codeception.yml
+++ b/src/Component/Resource/codeception.yml
@@ -1,22 +1,28 @@
 namespace: AccardTest\Component\Resource
 actor: Tester
 paths:
-    tests: tests
-    log: tests/_output
-    data: tests/_data
-    support: tests/_support
-    envs: tests/_envs
+    tests: Tests
+    log: Tests/_output
+    data: Tests/_data
+    support: Tests/_support
+    envs: Tests/_envs
 settings:
     bootstrap: _bootstrap.php
-    colors: false
+    colors: true
     memory_limit: 1024M
 extensions:
     enabled:
         - Codeception\Extension\RunFailed
-modules:
-    config:
-        Db:
-            dsn: ''
-            user: ''
-            password: ''
-            dump: tests/_data/dump.sql
+coverage:
+    enabled: true
+    include:
+        - Builder/*
+        - Exception/*
+        - Model/*
+        - Provider/*
+        - Repository/*
+    exclude:
+        - bin/*
+        - Resources/*
+        - Tests/*
+        - vendor/*
