--- a/src/Component/Resource/codeception.yml
+++ b/src/Component/Resource/codeception.yml
@@ -21,6 +21,7 @@ coverage:
         - Model/*
         - Provider/*
         - Repository/*
+        - Test/*
     exclude:
         - bin/*
         - Resources/*
