--- a/src/Bundle/UIBundle/package.json
+++ b/src/Bundle/UIBundle/package.json
@@ -6,18 +6,18 @@
   "license": "MIT",
   "main": "index.js",
   "dependencies": {
-    "bluebird": "^2.9.27",
-    "bootstrap": "^3.3.4",
-    "fixed-data-table": "^0.1.2",
-    "flux": "^2.0.3",
-    "font-awesome": "^4.3.0",
-    "immutable": "^3.7.2",
-    "jquery": "^2.1.4",
-    "moment": "^2.10.3",
-    "object-assign": "^2.0.0",
+    "bluebird": "2.9.27",
+    "bootstrap": "3.3.5",
+    "fixed-data-table": "0.4.1",
+    "flux": "2.0.3",
+    "font-awesome": "4.3.0",
+    "immutable": "3.7.4",
+    "jquery": "2.1.4",
+    "moment": "2.10.3",
+    "object-assign": "2.0.0",
     "postmessage-client-server": "0.0.11",
-    "react": "^0.13.2",
-    "react-bootstrap": "^0.21.2"
+    "react": "0.13.3",
+    "react-bootstrap": "0.23.7"
   },
   "devDependencies": {
     "babelify": "^6.1.1",
