--- a/src/Component/Option/composer.json
+++ b/src/Component/Option/composer.json
@@ -7,7 +7,7 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4.0",
-        "accard/resource": "~1.0"
+        "accard/resource": "dev-develop"
     },
     "require-dev": {
         "codeception/codeception": "dev-master",
