[OptionBundle] Now supports option vlaue order field in Doctrine.

--- a/src/Bundle/OptionBundle/Resources/config/doctrine/model/OptionValue.orm.yml
+++ b/src/Bundle/OptionBundle/Resources/config/doctrine/model/OptionValue.orm.yml
@@ -21,6 +21,11 @@ Accard\Component\Option\Model\OptionValue:
             nullable: false
         locked:
             type: boolean
+        order:
+            type: integer
+            column: ordering
+            options:
+                default: 0
 
     manyToOne:
         option:
