[FieldBundle] Choice ordering option now available on fields in Doctrine.

--- a/src/Bundle/FieldBundle/Resources/config/doctrine/model/Field.orm.yml
+++ b/src/Bundle/FieldBundle/Resources/config/doctrine/model/Field.orm.yml
@@ -37,6 +37,13 @@ Accard\Component\Field\Model\Field:
             nullable: false
             options:
                 default: false
+        order:
+            type: string
+            length: 60
+            nullable: false
+            column: ordering
+            options:
+                default: "numeric"
         configuration:
             type: array
 
