[OptionBundle] Option values now sorted by order field by default.

--- a/src/Bundle/OptionBundle/Resources/config/doctrine/model/Option.orm.yml
+++ b/src/Bundle/OptionBundle/Resources/config/doctrine/model/Option.orm.yml
@@ -31,3 +31,4 @@ Accard\Component\Option\Model\Option:
             mappedBy: option
             orphanRemoval: true
             cascade: ["persist", "remove"]
+            orderBy: { "order": "ASC" }
