--- a/src/Bundle/OptionBundle/Resources/config/services.yml
+++ b/src/Bundle/OptionBundle/Resources/config/services.yml
@@ -9,6 +9,7 @@ parameters:
 
     accard.provider.option.class: Accard\Bundle\OptionBundle\Provider\OptionProvider
     accard.form.type.option_choice.class: Accard\Bundle\OptionBundle\Form\Type\OptionChoiceType
+    accard.form.type.option_order_choice.class: Accard\Bundle\OptionBundle\Form\Type\OptionOrderChoiceType
 
 services:
 
@@ -39,3 +40,8 @@ services:
             - %accard.model.option.class%
         tags:
             - { name: form.type, alias: accard_option_choice }
+
+    accard.form.type.option_order_choice:
+        class: %accard.form.type.option_order_choice.class%
+        tags:
+            - { name: form.type, alias: accard_option_order_choice }
