--- a/src/Component/Sample/codeception.yml
+++ b/src/Component/Sample/codeception.yml
@@ -19,7 +19,5 @@ coverage:
         - Model/*
         - Builder/*
     exclude:
-        - bin/*
         - Resources/*
-        - tests/*
-        - vendor/*
+        - Tests/*
