--- a/src/Component/Diagnosis/codeception.yml
+++ b/src/Component/Diagnosis/codeception.yml
@@ -10,6 +10,9 @@ settings:
     bootstrap: _bootstrap.php
     colors: true
     memory_limit: 1024M
+extensions:
+    enabled:
+        - Codeception\Extension\RunFailed
 coverage:
     enabled: true
     include:
