--- a/src/Component/Patient/codeception.yml
+++ b/src/Component/Patient/codeception.yml
@@ -1,13 +1,14 @@
+namespace: AccardTest\Component\Patient
 actor: Tester
 paths:
-    tests: tests
-    log: tests/_output
-    data: tests/_data
-    support: tests/_support
-    envs: tests/_envs
+    tests: Tests
+    log: Tests/_output
+    data: Tests/_data
+    support: Tests/_support
+    envs: Tests/_envs
 settings:
     bootstrap: _bootstrap.php
-    colors: false
+    colors: true
     memory_limit: 1024M
 extensions:
     enabled:
@@ -21,7 +22,6 @@ coverage:
         - Provider/*
         - Repository/*
     exclude:
-        - bin/*
         - Resources/*
+        - Test/*
         - Tests/*
-        - vendor/*
