--- a/src/Component/Regimen/codeception.yml
+++ b/src/Component/Regimen/codeception.yml
@@ -10,10 +10,14 @@ settings:
     bootstrap: _bootstrap.php
     colors: true
     memory_limit: 1024M
+extensions:
+    enabled:
+        - Codeception\Extension\RunFailed
 coverage:
     enabled: true
     include:
         - Model/*
         - Builder/*
     exclude:
-        - tests/*
+        - Resources/*
+        - Tests/*
