--- a/src/Component/Sample/composer.json
+++ b/src/Component/Sample/composer.json
@@ -23,6 +23,9 @@
             "dev-master": "1.0.x-dev"
         }
     },
+    "config": {
+       "bin-dir": "bin"
+    },   
     "repositories": [
         { "type": "composer", "url": "http://accard-dev.med.upenn.edu/satis" }
     ]
