--- a/src/Bundle/PDSBundle/composer.json
+++ b/src/Bundle/PDSBundle/composer.json
@@ -23,7 +23,7 @@
     "require": {
         "php": ">=5.3.3",
         "accard/resource-bundle":     "~1.0",
-        "accard/field":               "~1.0"
+        "dag/field":               "~1.0"
     },
     "require-dev": {
         "codeception/codeception":          "dev-master",
