--- a/src/Component/Behavior/composer.json
+++ b/src/Component/Behavior/composer.json
@@ -7,8 +7,8 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4.0",
-        "accard/resource": "~1.0",
-        "accard/prototype": "~1.0"
+        "dag/resource": "~1.0",
+        "dag/prototype": "~1.0"
     },
     "require-dev": {
         "codeception/codeception": "dev-master",
