--- a/src/Component/Diagnosis/composer.json
+++ b/src/Component/Diagnosis/composer.json
@@ -7,8 +7,8 @@
     "license": "MIT",
     "require": {
         "php": ">=5.4.0",
-        "accard/resource": "~1.0",
-        "accard/field": "~1.0"
+        "dag/resource": "~1.0",
+        "dag/field": "~1.0"
     },
     "autoload": {
         "psr-4": { "Accard\\Component\\Diagnosis\\": "" }
