--- a/src/Component/Regimen/composer.json
+++ b/src/Component/Regimen/composer.json
@@ -22,8 +22,11 @@
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.0-dev"
         }
+    },
+    "config": {
+        "bin-dir": "bin"
     },
     "repositories": [
         { "type": "composer", "url": "http://accard-dev.med.upenn.edu/satis" }
