Updated framework dependency.

--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     },
     "require": {
         "php":                                   ">=5.4.0",
-        "dag/framework":                         "~1.0@dev",
+        "dag/framework":                         "~1.0",
         "friendsofsymfony/jsrouting-bundle":     "~2.0@dev",
         "knplabs/knp-menu-bundle":               "~2.0"
     },
