--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
     "minimum-stability": "dev",
     "extra": {
         "branch-alias": {
-            "dev-master": "1.0.x-dev"
+            "dev-master": "1.1.x-dev",
+            "1.0": "1.0.x-dev"
         }
     },
     "config": {
