--- a/composer.json
+++ b/composer.json
@@ -21,10 +21,7 @@
         }
     },
     "require": {
-        "php":                                   ">=5.4.0",
-        "dag/framework":                         "~1.0",
-        "friendsofsymfony/jsrouting-bundle":     "~2.0@dev",
-        "knplabs/knp-menu-bundle":               "~2.0"
+        "php": ">=5.4.0"
     },
     "require-dev": {
         "codeception/codeception": "dev-master",
