--- a/src/Bundle/ActivityBundle/composer.json
+++ b/src/Bundle/ActivityBundle/composer.json
@@ -22,7 +22,7 @@
     ],
     "require": {
         "php": ">=5.3.3",
-        "accard/resource-bundle":           "~1.0",
+        "dag/resource-bundle":           "~1.0",
         "accard/activity":                  "~1.0",
         "accard/prototype-bundle":          "~1.0",
         "doctrine/orm":                     "~2.5",
